--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:name=".core.BApp"
         android:allowBackup="true"
@@ -18,19 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
         <!-- 友盟 -->
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="59b24118f29d9801ff000c93" />
-
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="guanfang" />
 
-
         <activity
-            android:name=".ui.TestActivity"
+            android:name=".ui.MainActivity"
             android:keepScreenOn="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -40,21 +36,19 @@
             </intent-filter>
         </activity>
 
-
         <!-- ==========================  第三方 分享   ======================== -->
-        <!--微信分享/登录 -->
+        <!-- 微信分享/登录 -->
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <!--QQ分享-->
+        <!-- QQ分享 -->
         <activity
             android:name="com.umeng.qq.tencent.AuthActivity"
             android:launchMode="singleTask"
             android:noHistory="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -64,7 +58,6 @@
                 <data android:scheme="tencent100424468" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.umeng.qq.tencent.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
