--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:value="guanfang" />
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.DownLoadResourceActivity"
             android:keepScreenOn="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -35,6 +35,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.StartActivity"
+            android:keepScreenOn="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:keepScreenOn="true"
+            android:screenOrientation="portrait" />
 
         <!-- ==========================  第三方 分享   ======================== -->
         <!-- 微信分享/登录 -->
